<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".SignUpActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameField"
            android:hint="@string/name"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailAddressField"
            android:hint="@string/email"
            android:layout_below="@+id/usernameField"
            android:layout_alignLeft="@+id/usernameField"
            android:layout_alignStart="@+id/usernameField"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password"
            android:layout_below="@+id/emailAddressField"
            android:layout_alignLeft="@+id/emailAddressField"
            android:layout_alignStart="@+id/emailAddressField"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPasswordField"
            android:layout_alignLeft="@+id/usernameField"
            android:layout_alignStart="@+id/usernameField"
            android:layout_below="@+id/passwordField"
            android:hint="@string/confirm_password"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/organization"
            android:hint="@string/org"
            android:layout_below="@+id/radioGroup"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignRight="@+id/confirmPasswordField"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_alignEnd="@+id/confirmPasswordField"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@+id/organization"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:onClick="clickFunction"
            android:layout_gravity="center" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordField"
            android:layout_alignStart="@+id/confirmPasswordField"
            android:layout_alignLeft="@+id/confirmPasswordField"
            android:id="@+id/radioGroup"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type_1"
                android:id="@+id/radioButton"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type_2"
                android:id="@+id/radioButton2"
                android:checked="false"/>
        </RadioGroup>

        <TextView
            android:id="@+id/already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/already_member"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:textColor="#060fff"
            android:onClick="clickFunction"
            android:layout_gravity="center" />

    </RelativeLayout>
</ScrollView>
